# openhft-fpga-dpdk

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  orderbook_benchmark.cpp
cmake/: Sanitizers.cmake  Warnings.cmake
dispatcher/: event_dispatcher.cpp  event_dispatcher.hpp
docs/: architecture.md  dataflow.md  itch.md  mapper.md  order_cancel.md  roadmap.md
dpdk/parser/ethernet/: CMakeLists.txt  ethernet.cpp  ethernet.hpp  ethernet_test.cpp
dpdk/parser/ipv4/: CMakeLists.txt  ipv4.cpp  ipv4.hpp  ipv4_test.cpp
dpdk/parser/itch/: CMakeLists.txt  itch.cpp  itch.hpp
dpdk/parser/itch/mapper/: add_order_mapper.cpp  add_order_mapper.hpp  order_cancel.hpp  order_cancel_mapper.cpp  order_cancel_mapper.hpp  order_delete.hpp  order_delete_mapper.cpp  order_delete_mapper.hpp  order_executed.hpp  order_executed_mapper.cpp  order_executed_mapper.hpp  order_replace.hpp  order_replace_mapper.cpp  order_replace_mapper.hpp
dpdk/parser/itch/messages/: add_order.cpp  add_order.hpp  order_cancel.hpp  order_cancel_parser.cpp  order_cancel_parser.hpp  order_delete.hpp  order_delete_parser.cpp  order_delete_parser.hpp  order_executed.hpp  order_executed_parser.cpp  order_executed_parser.hpp  order_replace.hpp  order_replace_parser.cpp  order_replace_parser.hpp
dpdk/parser/udp/: CMakeLists.txt  udp.cpp  udp.hpp
dpdk/receiver/: CMakeLists.txt  config.hpp  main.cpp  receiver.cpp  receiver.hpp
events/: i_trade_listener.hpp
fpga/ethernet/: README.md  design.md  ethernet_parser.sv
fpga/fpga_bringup/fpga_bringup/: fpga_bringup.xpr
fpga/fpga_bringup/fpga_bringup/fpga_bringup.srcs/constrs_1/new/: a7_lite.xdc
fpga/fpga_bringup/fpga_bringup/fpga_bringup.srcs/sources_1/new/: blink.v
fpga/interfaces/: README.md  axis_stream_if.sv
fpga/sim/ethernet/: ethernet_parser_tb.sv
gateway/: CMakeLists.txt  gateway.cpp  gateway.hpp
gateway/market_data/: itch_handler.cpp  itch_handler.hpp
journal/: journal.cpp  journal.hpp
market_data/: trade_publisher.cpp  trade_publisher.hpp
market_data/replay/: CMakeLists.txt  itch_replay_dispatcher.cpp  itch_replay_dispatcher.hpp  itch_replay_reader.cpp  itch_replay_reader.hpp  pcap_replay_reader.cpp  pcap_replay_reader.hpp  pcap_replay_reader_test.cpp
models/: add_order.hpp
orderbook/software/: CMakeLists.txt  array_order_book.cpp  array_order_book.hpp  compile_test.cpp  matching_engine.cpp  matching_engine.hpp  order.hpp  order_book.hpp  price_level.hpp  trade.hpp
orderbook/software/common/: types.hpp
position/: position_manager.cpp  position_manager.hpp
risk/: CMakeLists.txt  risk_manager.cpp  risk_manager.hpp  risk_result.hpp
sequencer/: sequencer.cpp  sequencer.hpp
tests/: CMakeLists.txt
tests/integration/: itch_handler_cancel_test.cpp  itch_handler_delete_test.cpp  itch_handler_execute_test.cpp  itch_handler_replace_test.cpp  itch_replay_pipeline_test.cpp  parser_pipeline_test.cpp
tests/unit/mapper/: add_order_mapper_test.cpp  order_cancel_mapper_test.cpp  order_delete_mapper_test.cpp  order_executed_mapper_test.cpp  order_replace_mapper_test.cpp
tests/unit/parser/: add_order_test.cpp  ethernet_test.cpp  ipv4_test.cpp  itch_test.cpp  order_delete_parser_test.cpp  order_executed_parser_test.cpp  order_replace_parser_test.cpp
tests/unit/replay/: itch_replay_dispatcher_test.cpp  itch_replay_reader_test.cpp
tests/unit/risk/: risk_manager_test.cpp
